--- a/src/index.css
+++ b/src/index.css
@@ -50,15 +50,6 @@ html {
   align-items: center;
   background-color: var(--second-color);
 }
-.contact {
-  width: 100%;
-  height: 60px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  background-color: var(--second-color);
-}
 
 .content {
   max-width: 70%;
@@ -68,11 +59,9 @@ html {
   margin-right: auto;
 }
 .footer {
-  background-color: var(--dark-color);
+  background-color: var(--third-color);
   min-height: 100px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
   text-align: center;
   color: whitesmoke;
   padding-top: 10px;
@@ -80,9 +69,6 @@ html {
 
 .footer h3 {
   margin: 6px 0px 6px;
-}
-.footer p {
-  margin: 2px 0px 2px;
 }
 
 
@@ -99,3 +85,12 @@ html {
   height: 100px;
 }
 
+.contact {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: var(--second-color);
+  padding-top: 20px;
+}
