--- a/src/index.css
+++ b/src/index.css
@@ -15,25 +15,55 @@ html {
   box-sizing: inherit;
 }
 
-
-
+/* 
+*     ////////   HERO 
+*/
 .hero {
   background-color: var(--dark-color);
-  min-height: 180px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+  min-height: 100vh;
+  display: flex;
   color: whitesmoke;
-  padding-top: 10px;
+  /* border: lightblue solid 2px; */
+  padding-top: 15%;
+  justify-content: center;
 }
 
 .hero h1 {
   font-size: 3em;
   margin-top: 24px;
+  margin-bottom: 4px;
 }
 
-.image {
+.hero h3 {
+  margin-top: 4px;
+  font-size: 1.5em;
+}
+
+.hero button {
+  height: 48px;
+  width: 120px;
+  border: var(--second-color) 2px solid;
+  border-radius: 4px;
+  background-color: transparent;
+  color: whitesmoke;
+  font-size: 1.0em;
+}
+.namebox {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.headshot {
+  width: 230px;
+  height: 230px;
+  border-radius: 50%;
+  margin-left: 50px;
+  filter: grayscale(1);
+}
+
+
+.proj-image {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -41,30 +71,58 @@ html {
   padding: 120px 0 20px;
 }
 
+.container {
+  display: flex;
+}
+
+
+/* 
+*     ////////   NAV BAR 
+*/
 .nav-bar {
   width: 100%;
-  height: 60px;
+  height: 72px;
   margin: auto;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   background-color: var(--second-color);
+  position: sticky; top: 0
 }
 
 .nav-bar h3 {
   font-size: 1.25em;
+  font-weight: 200;
+}
+
+.nav-bar a {
+  color: whitesmoke;
+  text-decoration: none;
+}
+
+#button img {
+    -webkit-filter: invert(.9);
+    filter: invert(.9);
 }
 
 .content {
-  max-width: 70%;
+  max-width: 60%;
   min-width: 30%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  color: whitesmoke;
+  margin-bottom: -20px;
 }
+
+.content h1 {
+  font-size: 4em;
+}
+
+
 .footer {
-  background-color: var(--third-color);
-  min-height: 100px;
+  background-color: var(--dark-color);
+  min-height: 120px;
   display: block;
   text-align: center;
   color: whitesmoke;
@@ -87,14 +145,31 @@ html {
 
 .Spacer {
   height: 100px;
+  background-color: var(--dark-color);
 }
 
 .contact {
   width: 100%;
-  height: 80px;
+  min-height: 120px;
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: var(--second-color);
+  background-color: var(--dark-color);
   padding-top: 20px;
+  color: whitesmoke;
 }
+
+.contact p {
+  margin: 2px;
+}
+
+.namebox a {
+  margin: 4px;
+  color: whitesmoke;
+  text-decoration: none;
+}
+
+.main {
+  background-color: var(--dark-color);
+}
+
