--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,14 @@
 
 html {
   font-size: 100%;
+  font-weight: 200;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  background: var(--dark-color);
+}
+
+body {
+  margin: 0;
 }
 
 *, *::before, *::after {
