--- a/src/index.css
+++ b/src/index.css
@@ -71,10 +71,11 @@ body {
 }
 
 .headshot {
-  width: 230px;
-  height: 230px;
+  width: 210px;
+  height: 210px;
   border-radius: 50%;
   margin-left: 50px;
+  box-shadow:0px 0px 3px rgba(0, 0, 0, 0.5);
   filter: grayscale(1);
 }
 
@@ -130,11 +131,19 @@ body {
   max-width: 60%;
   min-width: 30%;
   display: block;
+  padding: 40px;
   margin-left: auto;
   margin-right: auto;
   color: whitesmoke;
   margin-bottom: -20px;
   grid-row-start: 5;
+  background-color:rgba(0, 0, 0, 0.5);
+}
+
+.content img {
+  margin-left: 10px;
+  -webkit-filter: invert(.9);
+  filter: invert(.9);
 }
 
 .content h1 {
@@ -165,17 +174,19 @@ body {
   flex-grow: 2;
 }
 
-
 .contact {
-  width: 100%;
+  min-width: 200px;
+  max-width: 30%;
   min-height: 120px;
-  display: flex;
-  flex-direction: column;
   text-align: center;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.7);
+  /* border: yellow solid 2px; */
   padding-top: 20px;
+  padding-bottom: 20px;
   color: whitesmoke;
   grid-row-start: 3;
+  margin: auto;
+  margin-top: 50px;
 }
 
 .contact p {
@@ -198,14 +209,18 @@ body {
   align-self: center;
   margin-top: 20px;
 }
+
+
 .namebox a {
   margin: 4px;
   color: whitesmoke;
   text-decoration: none;
 }
 
-
-
+.icons {
+  display: flex;
+  align-items: center;
+}
 
 main {
   width: 100vw;
@@ -214,6 +229,5 @@ main {
   position: absolute;
   width: 100%;
   margin: 0px auto;
-  padding: 20px 0px;
   line-height: 3em;
 }
