--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,18 @@ body {
 .content h1 {
   font-size: 4em;
 }
+.content h2 {
+  font-size: 2em;
+}
+.content h4 {
+  font-size: 1.25em;
+  margin: 8px 0px 4px;
+}
+
+.content p {
+  line-height: 1.75em;
+  font-size: 1.2em;
+}
 
 
 .footer {
