--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
   --dark-color: rgb(30, 30, 30);
-  --first-color: rgb(101, 22, 50);
   --second-color: rgb(186, 220, 226);
   --third-color: rgb(56, 118, 163);
 }
@@ -13,6 +12,20 @@ html {
   background: var(--dark-color);
 }
 
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+main {
+  width: 100vw;
+  color: white;
+  z-index: 99;
+  position: absolute;
+  width: 100%;
+  margin: 0px auto;
+  line-height: 3em;
+}
+
 /* 
 ********THREE JS CANVAS 
 */
@@ -21,95 +34,11 @@ canvas {
   top: 0;
   left: 0;
 }
-
 body {
   margin: 0;
 }
+/* //////END THREE JS CANVAS */
 
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-/* 
-*     ////////   HERO 
-*/
-.hero {
-  background-color: transparent;
-  display: flex;
-  color: whitesmoke;
-  /* border: lightblue solid 2px; */
-  padding-top: 15%;
-  padding-bottom: 25%;
-  justify-content: center;
-}
-
-.hero h1 {
-  font-size: 3em;
-  margin-top: 24px;
-  margin-bottom: 4px;
-}
-
-.hero h3 {
-  margin-top: 4px;
-  font-size: 1.5em;
-}
-
-.hero button {
-  height: 48px;
-  width: 120px;
-  border: var(--second-color) 2px solid;
-  border-radius: 4px;
-  background-color: transparent;
-  color: whitesmoke;
-  font-size: 1.0em;
-}
-
-.namebox {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.headshot {
-  width: 210px;
-  height: 210px;
-  border-radius: 50%;
-  margin-left: 50px;
-  box-shadow:0px 0px 3px rgba(0, 0, 0, 0.5);
-  filter: grayscale(1);
-}
-
-
-.proj-image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 300px;
-  padding: 120px 0 20px;
-  position: relative;
-  top: 160px;
-  z-index: 0;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 200px 600px 500px 500px 500px 500px;
-}
-
-.content {
-  max-width: 60%;
-  min-width: 30%;
-  /* display: block; */
-  padding: 40px;
-  margin-top: 60px;
-  margin-left: auto;
-  margin-right: auto;
-  color: papayawhip;
-  margin-bottom: -20px;
-  grid-row-start: 5;
-  background-color:rgba(0, 0, 0, 0.5);
-}
 
 .content img {
   margin-left: 10px;
@@ -117,63 +46,22 @@ body {
   filter: invert(.9);
 }
 
-.content h1 {
-  font-size: 4em;
-}
-.content h2 {
-  font-size: 2em;
-}
-.content h4 {
-  font-size: 1.25em;
-  margin: 8px 0px 4px;
-}
 
-.content p {
-  line-height: 1.75em;
-  font-size: 1.2em;
-}
-
-
-.footer {
-  background-color: transparent;
-  min-height: 120px;
-  display: block;
-  text-align: center;
-  color: whitesmoke;
-  padding-top: 10px;
-}
-
-.footer h3 {
-  margin: 20px 0px 6px;
-}
-
-
-#button {
-  /* border: var(--third-color) 1px solid; */
-  min-width: 60px;
-  text-align: center;
-}
-.button-project {
-  flex-grow: 2;
-}
+/* CONTACT FIELD */
 
 .contact {
-  min-width: 200px;
-  max-width: 30%;
-  min-height: 120px;
+  width: 50%;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.7);
-  /* border: yellow solid 2px; */
-  padding-top: 20px;
-  padding-bottom: 20px;
+  background-color: rgba(0, 0, 0, 0.65);
   color: whitesmoke;
-  grid-row-start: 3;
   margin: auto;
   margin-top: 50px;
 }
 
 .contact p {
-  margin: 2px;
+  margin: -1em 0 0;
+  padding: 0 0 0;
+  
 }
 
 .contact a {
@@ -190,33 +78,19 @@ body {
   color: whitesmoke;
   font-size: 1.0em;
   align-self: center;
-  margin-top: 20px;
+  margin: 20px 0 20px;
+}
+
+.footer {
+  background-color: transparent;
+  min-height: 120px;
+  display: block;
+  text-align: center;
+  color: rgb(150, 150, 150);
+  padding-top: 3em;
+  line-height: 1.25em;
 }
 
 
-.namebox a {
-  margin: 4px;
-  color: whitesmoke;
-  text-decoration: none;
-}
-
-.icons {
-  display: flex;
-  align-items: center;
-}
-
-.main {
-  display: grid;
-}
-
-main {
-  width: 100vw;
-  color: white;
-  z-index: 99;
-  position: absolute;
-  width: 100%;
-  margin: 0px auto;
-  line-height: 3em;
-}
 
 
