--- a/src/components/Navbar2.css
+++ b/src/components/Navbar2.css
@@ -3,10 +3,12 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: transparent;
+    background-color: rgba(30,30,30,0.9);
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 2;
+    height: 84px;
 }
 
 nav img {
