--- a/src/components/content.css
+++ b/src/components/content.css
@@ -1,5 +1,5 @@
 .content {
-    max-width: 90%;
+    max-width: 900px;
     background-color:rgba(0, 0, 0, 0.65);
     margin: auto;
     padding: 1em;
