--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ body {
   color: whitesmoke;
   margin: auto;
   margin-top: 50px;
+  max-width: 360px;
 }
 
 .contact p {
@@ -87,7 +88,8 @@ body {
   display: block;
   text-align: center;
   color: rgb(150, 150, 150);
-  padding-top: 3em;
+  padding-top: 4em;
+  margin-bottom: 4em;
   line-height: 1.25em;
 }
 
