--- a/src/components/Navbar2.css
+++ b/src/components/Navbar2.css
@@ -3,7 +3,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(30,30,30,0.9);
+    background-color: rgba(30, 30, 30, 1);
     position: fixed;
     width: 100%;
     top: 0;
@@ -22,6 +22,7 @@ nav ul {
 
 nav ul.open {
     display: flex;
+    background-color:rgba(30, 30, 30, 1);
 }
 
 nav ul li {
