--- a/src/components/content.css
+++ b/src/components/content.css
@@ -19,12 +19,17 @@
     margin: 0.25em 0 0.25em;
   }
   .content p {
-    line-height: 1.5em;
+    line-height: 1.65em;
     font-size: 1em;
     margin: 0.25em 0 1.25em;
+  }
+  .content a {
+    color: aqua;
+    text-decoration: none;
   }
 
   .icons {
     display: flex;
     align-items: center;
   }
+
