--- a/src/index.css
+++ b/src/index.css
@@ -82,10 +82,6 @@ body {
   margin: 20px 0 20px;
 }
 
-.active {
-  transform: scale(1.1);
-  border: red 1px solid;
-}
 
 .footer {
   background-color: transparent;
@@ -95,7 +91,7 @@ body {
   margin: 8em 2em 4em 2em;
   line-height: 1.25em;
   min-width: 360px;
-
+  
 }
 
 .footer h4 {
@@ -104,5 +100,12 @@ body {
 }
 
 
+@media screen and (min-width: 550px) {
 
+.active {
+  transform: scale(1.1);
+  border: red 1px solid;
+  border-radius: 50%;
+}
 
+}
