--- a/src/index.css
+++ b/src/index.css
@@ -90,12 +90,9 @@ body {
   color: rgb(150, 150, 150);
   margin: 8em 2em 4em 2em;
   line-height: 1.25em;
-  min-width: 360px;
-  
 }
 
 .footer h4 {
-  
   text-align: center;
 }
 
@@ -104,7 +101,7 @@ body {
 
 .active {
   transform: scale(1.1);
-  border: red 1px solid;
+  /* border: red 1px solid; */
   border-radius: 50%;
 }
 
