--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,13 +1,18 @@
 /* CONTACT FIELD */
 
 .contact {
-    width: 50%;
+    width: 270px;
+    height: 270px;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.65);
     color: whitesmoke;
     margin: auto;
-    margin-top: 50px;
-    max-width: 360px;
+    margin-top: 80px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 20px;
   }
   
   .contact p a {
@@ -26,7 +31,7 @@
     color: whitesmoke;
     font-size: 1.0em;
     align-self: center;
-    margin: 20px 0 20px;
+    margin: 10px 0 10px;
   }
   
   .active {
