--- a/src/components/content.css
+++ b/src/components/content.css
@@ -17,15 +17,17 @@
   .content h4 {
     font-size: 1.25em;
     margin: 0.25em 0 0.25em;
+    color: rgb(210, 210, 210);
   }
   .content h5 {
     font-weight: 200;
     color: rgb(170, 170, 170);
-    border: white solid 0.5px;
-    border-radius: 5%;
+    border: rgb(120,120,120) solid 1px;
     padding: 1px 10px 1px 6px;
     line-height: 1.5em;
     margin: 14px 6px 2px 4px;
+    border-top-left-radius: 10px 10px;
+
   }
 
   .content p {
