--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --dark-color: rgb(30, 30, 30);
   --second-color: rgb(186, 220, 226);
   --third-color: rgb(56, 118, 163);
+  --grey-color: rgb(150, 150, 150);
 }
 
 html {
@@ -63,8 +64,6 @@ body {
 
 .contact p {
   margin: -1em 0 0;
-  padding: 0 0 0;
-  
 }
 
 .contact a {
@@ -88,9 +87,9 @@ body {
 .footer {
   display: block;
   min-height: 120px;
-  color: rgb(150, 150, 150);
+  color: var(--grey-color);
   margin: 0 auto;
-  padding: 8rem;
+  padding: 8rem 1rem 4rem;
   line-height: 1.25em;
   max-width: 800px;
   width: 100vw;
