--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 12rem;
+  padding-top: 17rem;
   padding-bottom: 8rem;
 }
 
@@ -34,7 +34,7 @@
   }
 
   .contact a:hover {
-    color: peachpuff;
+    color: rgb(203, 221, 62)
   }
   
   .contact button {
