--- a/src/components/content.css
+++ b/src/components/content.css
@@ -1,23 +1,29 @@
 .content {
-    max-width: 800px;
     background-color:rgba(0, 0, 0, 0.65);
     margin: auto;
     padding: 1.5em;
   }
 
+  .wrapper {
+    max-width: 720px;
+    margin: auto;
+  }
+
   .content h1 {
-    font-size: 3em;
-    margin: 0.75em 0 0.75em;
-    color: rgba(150, 150, 150, 0.4);
+    font-family: 'Dosis', sans-serif;
+    font-size: 6em;
+    margin: 0.75em 0.5rem -0.5em;
+    color: rgba(150, 150, 150, 0.13);
   }
   .content h2 {
     font-size: 1.9em;
-    margin: 0.5em 0 -0.5em;
+    margin: 0.5em 0 0.25em;
   }
   .content h4 {
-    font-size: 1.25em;
-    margin: 0.25em 0 0.25em;
+    font-size: 1.4em;
+    margin: 0.25em 1.5rem 0.25em;
     color: rgb(210, 210, 210);
+    height: 2.25rem;
   }
   .content h5 {
     font-weight: 200;
@@ -31,9 +37,9 @@
   }
 
   .content p {
-    line-height: 1.65em;
-    font-size: 1em;
-    margin: 0.25em 0 1.25em;
+    line-height: 1.8em;
+    font-size: 1.15em;
+    margin: 0.25em 1.5rem 1.25em;
   }
   .content a {
     color: aqua;
@@ -44,4 +50,18 @@
     display: flex;
     align-items: center;
   }
+
+  .fadeblock-in {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0) );
+    margin: auto;
+    padding: 1.5em;
+    height: 16rem;
+  }
+  .fadeblock-out {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0) );
+    margin: auto;
+    padding: 1.5em;
+    height: 24rem;
+  }
+  
 
