--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -8,7 +8,7 @@
     grid-template-columns: 1fr;
     color: whitesmoke;
     padding-top: 15%;
-    padding-bottom: 30%;
+    padding-bottom: 5%;
     justify-content: center;
   }
   
@@ -44,6 +44,8 @@
     width: 80%;
     margin: auto;
     line-height: 1.5em;
+    padding-left: 8px;
+    padding-right: 8px;
   }
 
   .hero button {
