--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ main {
   width: 100%;
   margin: 0px auto;
   line-height: 3em;
+  overflow-x: hidden;
 }
 
 /* 
@@ -54,14 +55,15 @@ body {
   min-height: 120px;
   color: var(--grey-color);
   margin: 0 auto;
-  padding: 8rem 1rem 4rem;
+  padding: 24rem 1rem 4rem;
   line-height: 1.25em;
-  max-width: 800px;
+  max-width: 720px;
   width: 100vw;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.65);
 }
 
 .footer h4 {
   text-align: center;
 }
+
+
