--- a/src/components/navBar/SiteNavBar.css
+++ b/src/components/navBar/SiteNavBar.css
@@ -25,18 +25,23 @@ nav ul.open {
 }
 
 nav ul.unopen {
-    padding: 14px 4px 0 4px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    padding-top: 0px;
 }
 
 nav ul li {
-    list-style-type: none; 
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    height: 80px;
 }
 
 nav ul li a {
     display: block;
     text-decoration: none;
     color: whitesmoke;
-    padding:  0.5rem 0.5rem 0.5rem 0;
+    padding:  0 0.5rem 0;
     margin: 0 0.5rem;
     border-radius: 0.5rem;
 }
@@ -65,8 +70,15 @@ nav .menu span {
 }
 
 .home {
-    margin-left: 20px;
-    margin-top: 10px;
+    margin-left: 10px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.home a {
+    text-decoration: none;
 }
 
 .home svg {
@@ -78,6 +90,38 @@ nav .menu span {
 .home svg:hover {
     color: rgb(203, 221, 62);
 }
+
+/**
+* Submenu
+**/
+
+.exhibits-submenu {
+    /* border: red 2px solid; */
+    background-color:rgba(50, 50, 50, 1);
+    height: 16rem;
+    width: 12rem;
+    position: absolute;
+    top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    list-style: none;
+    text-align: start;
+    padding: 0;
+}
+
+.exhibits-submenu li {
+    cursor: pointer;
+}
+  
+.exhibits-submenu li a:hover {
+    color: rgb(203, 221, 62);
+}
+
+.exhibits-submenu.closed {
+    display: none;
+}
+
 
 
 @media (max-width: 480px) {
