--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -29,8 +29,8 @@
   }
   
   .headshot {
-    width: 180px;
-    height: 180px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     box-shadow:0px 0px 3px rgba(0, 0, 0, 0.5);
     margin: auto;
@@ -46,6 +46,11 @@
     line-height: 1.5em;
     padding-left: 8px;
     padding-right: 8px;
+  }
+
+  .hero h2 {
+    color: rgb(255, 255, 255, 0.5);
+    text-align: center;
   }
 
   .hero button {
