--- a/src/components/content.css
+++ b/src/components/content.css
@@ -10,14 +10,15 @@
 }
 
 .content h1 {
-  font-family: 'Dosis', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 6em;
   margin: 0.75em 0.5rem -0.5em;
   color: rgba(150, 150, 150, 0.13);
 }
 
 .content h2 {
-  font-size: 1.9em;
+  font-family: 'Rubik', sans-serif;
+  font-size: 2.2em;
   margin: 0.5em 0 0.25em;
 }
 
