--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -14,18 +14,20 @@
   
   .hero h1 {
     text-align: center;
-    font-size: 2.25em;
+    font-size: 2.75em;
     margin-top: 1em;
     margin-bottom: 0.25em;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
   }
   
   .hero h3 {
-    font-size: 1.5em;
-    font-weight: 400;
+    font-size: 1.45em;
+    font-weight: 300;
     text-align: center;
     width: 70%;
     margin: auto;
-    line-height: 1.5em;
+    line-height: 1.25em;
   }
   
   .headshot {
@@ -43,7 +45,7 @@
     text-align: left;
     width: 80%;
     margin: auto;
-    line-height: 1.5em;
+    line-height: 1.65em;
     padding-left: 8px;
     padding-right: 8px;
   }
