--- a/src/components/content.css
+++ b/src/components/content.css
@@ -18,12 +18,12 @@
 
 .content h2 {
   font-family: 'Rubik', sans-serif;
-  font-size: 2.2em;
+  font-size: 2.3em;
   margin: 0.5em 0 0.25em;
 }
 
 .content h4 {
-  font-size: 1.4em;
+  font-size: 1.3em;
   margin: 0.25em 1.5rem 0.25em;
   color: rgb(210, 210, 210);
   height: 2.25rem;
@@ -47,7 +47,7 @@
 }
 
 .content a {
-  color: aqua;
+  color: rgb(203, 221, 62);
   text-decoration: none;
 }
 
